trocado arquivo paroquiasaopedro para index

--- a/Projeto_SaoPedro/_textos/avisos.html
+++ b/Projeto_SaoPedro/_textos/avisos.html
@@ -31,7 +31,7 @@
 <div id="menu">
 <nav>
     <ul>
-        <li><a href="../_index/paroquiaSaoPedro.html">Home</a></li>   
+        <li><a href="../_index/index.html">Home</a></li>   
         <li><a href="../_textos/contatos.html">Contatos</a></li>
         <li><a href="#">Fotos</a></li>       
         <li><a href="../_textos/horarios.html">Horários</a></li>
