--- a/Projeto_SaoPedro/_textos/horarios.html
+++ b/Projeto_SaoPedro/_textos/horarios.html
@@ -23,7 +23,7 @@
     <div>
 	<nav id="menu">
     <ul>
-        <li><a href="../_index/paroquiaSaoPedro.html">Home</a></li> 
+        <li><a href="../_index/index.html">Home</a></li> 
     	<li><a href="../_textos/avisos.html">Avisos</a></li>   
         <li><a href="../_textos/contatos.html">Contatos</a></li>
         <li><a href="#">Fotos</a></li>        
