--- a/Projeto_SaoPedro/_textos/texto_2.html
+++ b/Projeto_SaoPedro/_textos/texto_2.html
@@ -13,7 +13,7 @@
 	<h1>Entrega das chaves a São Pedro</h1>
 	<nav id="menu">
     <ul>
-    	<li><a href="../_index/paroquiaSaoPedro.html">Home</a></li> 
+    	<li><a href="../_index/index.html">Home</a></li> 
         <li><a href="../_textos/avisos.html">Avisos</a></li>   
         <li><a href="../_textos/contatos.html">Contatos</a></li>
         <li><a href="#">Fotos</a></li>        
