--- a/Projeto_SaoPedro/_textos/contatos.html
+++ b/Projeto_SaoPedro/_textos/contatos.html
@@ -21,7 +21,7 @@
 
 <nav id="menu">
     <ul>
-    	<li><a href="..\_index\paroquiaSaoPedro.html">Home</a></li>
+    	<li><a href="..\_index\index.html">Home</a></li>
         <li><a href="..\_textos\avisos.html">Avisos</a></li>         
         <li><a href="#">Fotos</a></li>       
         <li><a href="..\_textos\horarios.html">Horários</a></li>
