--- a/Projeto_SaoPedro/_index/index.html
+++ b/Projeto_SaoPedro/_index/index.html
@@ -11,7 +11,7 @@
 	<meta name="robots" content="index, follow">
 	<meta name="author" content="Eduardo de Almeida Oliveira">
 
-	<link rel="stylesheet" type="text/css" href="..\_css\estilo_geral.css"/>
+	<link rel="stylesheet" type="text/css" href="../_css/estilo_geral.css"/>
 	<link href="https://fonts.googleapis.com/css2?family=Allura&family=Great+Vibes&family=Lobster&family=Ruthie&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@700&display=swap" rel="stylesheet">
 
