--- a/_textos/texto_3.html
+++ b/_textos/texto_3.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>Crucifixação de São Pedro</title>
 
-<link rel="stylesheet" type="text/css" href="../_css/estilo_geral.css"/>
+<link rel="stylesheet" type="text/css" href="_css/estilo_geral.css"/>
 <link href="https://fonts.googleapis.com/css2?family=Allura&family=Great+Vibes&family=Lobster&family=Ruthie&display=swap" rel="stylesheet">	
 <link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@700&display=swap" rel="stylesheet">
 </head>
@@ -13,16 +13,16 @@
 	<h1>Crucifixação de São Pedro</h1>
 	<nav id="menu">
     <ul>
-    	<li><a href="../index.html">Home</a></li> 
-        <li><a href="../_textos/avisos.html">Avisos</a></li>   
-        <li><a href="../_textos/contatos.html">Contatos</a></li>
+    	<li><a href="index.html">Home</a></li> 
+        <li><a href="_textos/avisos.html">Avisos</a></li>   
+        <li><a href="_textos/contatos.html">Contatos</a></li>
         <li><a href="#">Fotos</a></li>
-        <li><a href="../_textos/horarios.html">Horários</a></li>
+        <li><a href="_textos/horarios.html">Horários</a></li>
         <li><a href="#">Pastorais</a></li>
     </ul>
 	</nav>
 	<figure class="fixa">
-		<img id="figura1" src="../_imagens/img_crucificacao.jpg">
+		<img id="figura1" src="_imagens/img_crucificacao.jpg">
 	</figure>
 <div class="textos">
 	<p class="p_textos">Morte de São Pedro
