--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta name="robots" content="index, follow">
 	<meta name="author" content="Eduardo de Almeida Oliveira">
 
-	<link rel="stylesheet" type="text/css" href="..\_css\estilo_geral.css"/>
+	<link rel="stylesheet" type="text/css" href="_css/estilo_geral.css"/>
 	<link href="https://fonts.googleapis.com/css2?family=Allura&family=Great+Vibes&family=Lobster&family=Ruthie&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@700&display=swap" rel="stylesheet">
 
@@ -35,10 +35,10 @@
 <div id="menu">
 <nav>
     <ul>
-        <li><a href="../_textos/avisos.html">Avisos</a></li>   
-        <li><a href="../_textos/contatos.html">Contatos</a></li>
+        <li><a href="_textos/avisos.html">Avisos</a></li>   
+        <li><a href="_textos/contatos.html">Contatos</a></li>
         <li><a href="#">Fotos</a></li>       
-        <li><a href="../_textos/horarios.html">Horários</a></li>
+        <li><a href="_textos/horarios.html">Horários</a></li>
         <li><a href="#">Pastorais</a></li>
     </ul>
 </nav>
@@ -50,15 +50,15 @@
 
 <div id="figuras_saopedro"> 
  <figure class="figuras">
-	<a href="../_textos/texto_1.html"><img id="figura1" src="../_imagens/img_saopedro.jpg"></a>
+	<a href="_textos/texto_1.html"><img id="figura1" src="_imagens/img_saopedro.jpg"></a>
 	<figcaption>Apóstolo São Pedro</figcaption>
 </figure>
 <figure class="figuras">
-	<a href="../_textos/texto_2.html"><img id="figura2" src="../_imagens/img_entregachaves.jpg"></a>
+	<a href="_textos/texto_2.html"><img id="figura2" src="_imagens/img_entregachaves.jpg"></a>
 	<figcaption>Entrega das chaves a São Pedro</figcaption>
 </figure>
 <figure class="figuras">
-	<a href="../_textos/texto_3.html"><img id="figura3" src="../_imagens/img_crucificacao.jpg"></a>
+	<a href="_textos/texto_3.html"><img id="figura3" src="_imagens/img_crucificacao.jpg"></a>
 	<figcaption>Crucifixação de São Pedro</figcaption>
 </figure>
 </div>
