--- a/_textos/contatos.html
+++ b/_textos/contatos.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8"/>
 	<title> Paróquia São Pedro Apóstolo</title>
 
-	<link rel="stylesheet" type="text/css" href="_css/estilo_geral.css"/>
+	<link rel="stylesheet" type="text/css" href="../_css/estilo_geral.css"/>
 	<link href="https://fonts.googleapis.com/css2?family=Allura&family=Great+Vibes&family=Lobster&family=Ruthie&display=swap" rel="stylesheet">
 	
 	<link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@700&display=swap" rel="stylesheet">
@@ -21,10 +21,10 @@
 
 <nav id="menu">
     <ul>
-    	<li><a href="index.html">Home</a></li>
-        <li><a href="_textos/avisos.html">Avisos</a></li>         
+    	<li><a href="../index.html">Home</a></li>
+        <li><a href="../_textos/avisos.html">Avisos</a></li>         
         <li><a href="#">Fotos</a></li>       
-        <li><a href="_textos/horarios.html">Horários</a></li>
+        <li><a href="../_textos/horarios.html">Horários</a></li>
         <li><a href="#">Pastorais</a></li>
     </ul>
 </nav>
