--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <div id="figuras_saopedro"> 
  <figure class="figuras">
-	<a href="_textos/texto_1.html"><img id="figura1" src="_imagens/img_saopedro.jpg"></a>
+	<a href="paroquiaSaoPedro/_textos/texto_1.html"><img id="figura1" src="paroquiaSaoPedro/_imagens/img_saopedro.jpg"></a>
 	<figcaption>Apóstolo São Pedro</figcaption>
 </figure>
 <figure class="figuras">
