--- a/_textos/contatos.html
+++ b/_textos/contatos.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8"/>
 	<title> Paróquia São Pedro Apóstolo</title>
 
-	<link rel="stylesheet" type="text/css" href="../_css/estilo_geral.css"/>
+	<link rel="stylesheet" type="text/css" href="../_css/style.css"/>
 	<link href="https://fonts.googleapis.com/css2?family=Allura&family=Great+Vibes&family=Lobster&family=Ruthie&display=swap" rel="stylesheet">
 	
 	<link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@700&display=swap" rel="stylesheet">
