--- a/_textos/texto_2.html
+++ b/_textos/texto_2.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>Entrega das chaves a São Pedro</title>
 
-<link rel="stylesheet" type="text/css" href="../_css/estilo_geral.css"/>
+<link rel="stylesheet" type="text/css" href="../_css/style.css"/>
 <link href="https://fonts.googleapis.com/css2?family=Allura&family=Great+Vibes&family=Lobster&family=Ruthie&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@700&display=swap" rel="stylesheet">	
 </head>
