. ou inves de ..

--- a/index.html
+++ b/index.html
@@ -50,15 +50,15 @@
 
 <div id="figuras_saopedro"> 
  <figure class="figuras">
-	<a href="_textos/texto_1.html"><img id="figura1" src="_imagens/img_saopedro.jpg"></a>
+	<a href="_textos/texto_1.html"><img id="figura1" src="./_imagens/img_saopedro.jpg"></a>
 	<figcaption>Apóstolo São Pedro</figcaption>
 </figure>
 <figure class="figuras">
-	<a href="_textos/texto_2.html"><img id="figura2" src="_imagens/img_entregachaves.jpg"></a>
+	<a href="_textos/texto_2.html"><img id="figura2" src="./_imagens/img_entregachaves.jpg"></a>
 	<figcaption>Entrega das chaves a São Pedro</figcaption>
 </figure>
 <figure class="figuras">
-	<a href="_textos/texto_3.html"><img id="figura3" src="_imagens/img_crucificacao.jpg"></a>
+	<a href="_textos/texto_3.html"><img id="figura3" src="./_imagens/img_crucificacao.jpg"></a>
 	<figcaption>Crucifixação de São Pedro</figcaption>
 </figure>
 </div>
