retirada do _ das pastas

--- a/textos/avisos.html
+++ b/textos/avisos.html
@@ -7,7 +7,7 @@
 	<meta charset="utf-8"/>
 	<title> Paróquia São Pedro Apóstolo</title>
 
-	<link rel="stylesheet" type="text/css" href="../_css/style.css"/>
+	<link rel="stylesheet" type="text/css" href="../css/style.css"/>
 	<link href="https://fonts.googleapis.com/css2?family=Allura&family=Great+Vibes&family=Lobster&family=Ruthie&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@700&display=swap" rel="stylesheet">
 
@@ -32,9 +32,9 @@
 <nav>
     <ul>
         <li><a href="../index.html">Home</a></li>   
-        <li><a href="../_textos/contatos.html">Contatos</a></li>
+        <li><a href="../textos/contatos.html">Contatos</a></li>
         <li><a href="#">Fotos</a></li>       
-        <li><a href="../_textos/horarios.html">Horários</a></li>
+        <li><a href="../textos/horarios.html">Horários</a></li>
         <li><a href="#">Pastorais</a></li>
     </ul>
 </nav>
