--- a/textos/horarios.html
+++ b/textos/horarios.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title> Apóstolo São Pedro</title>
 
-<link rel="stylesheet" type="text/css" href="../_css/style.css"/>
+<link rel="stylesheet" type="text/css" href="../css/style.css"/>
 <link href="https://fonts.googleapis.com/css2?family=Allura&family=Great+Vibes&family=Lobster&family=Ruthie&display=swap" rel="stylesheet">	
 <link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@700&display=swap" rel="stylesheet">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -24,8 +24,8 @@
 	<nav id="menu">
     <ul>
         <li><a href="../index.html">Home</a></li> 
-    	<li><a href="../_textos/avisos.html">Avisos</a></li>   
-        <li><a href="../_textos/contatos.html">Contatos</a></li>
+    	<li><a href="../textos/avisos.html">Avisos</a></li>   
+        <li><a href="../textos/contatos.html">Contatos</a></li>
         <li><a href="#">Fotos</a></li>        
         <li><a href="#">Pastorais</a></li>
     </ul>
