--- a/textos/texto_2.html
+++ b/textos/texto_2.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>Entrega das chaves a São Pedro</title>
 
-<link rel="stylesheet" type="text/css" href="../_css/style.css"/>
+<link rel="stylesheet" type="text/css" href="../css/style.css"/>
 <link href="https://fonts.googleapis.com/css2?family=Allura&family=Great+Vibes&family=Lobster&family=Ruthie&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@700&display=swap" rel="stylesheet">	
 </head>
@@ -14,15 +14,15 @@
 	<nav id="menu">
     <ul>
     	<li><a href="../index.html">Home</a></li> 
-        <li><a href="../_textos/avisos.html">Avisos</a></li>   
-        <li><a href="../_textos/contatos.html">Contatos</a></li>
+        <li><a href="../textos/avisos.html">Avisos</a></li>   
+        <li><a href="../textos/contatos.html">Contatos</a></li>
         <li><a href="#">Fotos</a></li>        
-        <li><a href="../_textos/horarios.html">Horários</a></li>
+        <li><a href="../textos/horarios.html">Horários</a></li>
         <li><a href="#">Pastorais</a></li>
     </ul>
 	</nav>
 	<figure class="fixa">
-		<img id="figura1" src="../_imagens/img_entregachaves.jpg">
+		<img id="figura1" src="../imagens/img_entregachaves.jpg">
 	</figure>
 <div class="textos">
 	
