--- a/textos/texto_3.html
+++ b/textos/texto_3.html
@@ -7,6 +7,8 @@
 <link rel="stylesheet" type="text/css" href="../css/style.css"/>
 <link href="https://fonts.googleapis.com/css2?family=Allura&family=Great+Vibes&family=Lobster&family=Ruthie&display=swap" rel="stylesheet">	
 <link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@700&display=swap" rel="stylesheet">
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
