--- a/textos/contatos.html
+++ b/textos/contatos.html
@@ -13,7 +13,9 @@
 </head>
 
 <body>
-			
+		
+
+
 <div id="titulo">
 <h1>Contatos</h1>
 </div>
@@ -23,18 +25,24 @@
     <ul>
     	<li><a href="../index.html">Home</a></li>
         <li><a href="../textos/avisos.html">Avisos</a></li>         
-        <li><a href="#">Fotos</a></li>       
-        <li><a href="../textos/horarios.html">Horários</a></li>
+        <li><a href="../textos/horarios.html">Horários</a></li>       
+        <li><a href="#">Fotos</a></li>
         <li><a href="#">Pastorais</a></li>
     </ul>
 </nav>
 
 <div id="contatos">
-	 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d61164.97345071932!2d-49.315557125617666!3d-16.636260005734226!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x935ef3876f564717%3A0x8d82538e0c7ff7df!2zUGFyw7NxdWlhIFPDo28gUGVkcm8gQXDDs3N0b2xv!5e0!3m2!1spt-BR!2sbr!4v1589839266275!5m2!1spt-BR!2sbr" width="400" height="400" frameborder="0" style="border: 0" allowfullscreen="" aria-hidden="false" tabindex="0";display="flex";> 	
+	 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d61164.97345071932!2d-49.315557125617666!3d-16.636260005734226!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x935ef3876f564717%3A0x8d82538e0c7ff7df!2zUGFyw7NxdWlhIFPDo28gUGVkcm8gQXDDs3N0b2xv!5e0!3m2!1spt-BR!2sbr!4v1589839266275!5m2!1spt-BR!2sbr" width="600px" height="400px" frameborder="0" style="border: 0" allowfullscreen="" aria-hidden="false" tabindex="0";display="flex";> 	
  	</iframe>
  	
+ 	<div>
+ 	<p>Endereço: Alameda Fragonard-St. Perim-Goiânia-GO-74575-170</p>
  	<p>Telefone: (62)3911-0992 - 981044912 </p>
+ 	<p>Instagram: @paroquiasaopedro_setrogentil</p>
+	</div>
+
 </div>
+
 
 
 </body>
