textos mudança de bold para 300

--- a/textos/texto_2.html
+++ b/textos/texto_2.html
@@ -28,7 +28,7 @@
 	</figure>
 <div class="textos">
 	
-<p class="p_textos">Discípulo e Apóstolo
+<p class="p_textos"><em>Discípulo e Apóstolo</em> -
 Pedro fez parte dos discípulos mais íntimos de Jesus, tendo se dedicado a Jesus com zelo extremado, marcado por atitudes impulsivas, como quando usou a espada para defender seu mestre. Seu nome ocupa sempre o primeiro lugar nas listas de discípulos mencionados nos Evangelhos Sinóticos.</p>
 
 <p class="p_textos">A posição de Pedro se firmou diante da declaração de Jesus: “Por isso eu lhe digo: você é Pedro, e sobre essa pedra construirei a minha Igreja, e o poder da morte nunca poderá vencê-la. Eu lhe darei as chaves do Reino do Céu, e o que você ligar na terra será ligado no céu, e o que você desligar na terra será desligado no céu” (Mateus 16,18-19).</p>
