--- a/textos/texto_3.html
+++ b/textos/texto_3.html
@@ -27,7 +27,7 @@
 		<img id="figura1" src="../imagens/img_crucificacao.jpg">
 	</figure>
 <div class="textos">
-	<p class="p_textos">Morte de São Pedro
+	<p class="p_textos"><em>Morte de São Pedro</em>
 Segundo relatos aceitos pela Igreja Católica, Pedro viveu em Roma, onde, segundo a tradição, foi morto por ordem de Nero, no ano 67 da Era Cristã. Pedro foi crucificado de cabeça para baixo, segundo seu desejo, pois não considerava digno de morrer como seu mestre.</p>
 
 <p class="p_textos">Documentos autênticos do século IV afirmam que São Paulo teria sido enterrado ao longo da via Triunfal, no local chamado de elevações vaticanas. Sobre a sua sepultura, santo Anacleto, o terceiro bispo de Roma, levantou um santuário que aos poucos se tornou o ponto de encontro dos cristãos.</p>
