--- a/textos/texto_1.html
+++ b/textos/texto_1.html
@@ -42,16 +42,16 @@
 
 <p class="p_textos">Por indicação de João Batista foi levado por seu irmão André para conhecer Jesus Cristo. No primeiro encontro Jesus o chamou de Kepha (pedra, em aramaico) Petros em grego. Nessa época de seu encontro com Cristo, Pedro morava em Cafarnaum, com a família de sua mulher.</p>
 
-<p class="p_textos">Fontes de informações sobre Pedro -
+<p class="p_textos"><em> Fontes de informações sobre Pedro</em> -
 As fontes de informações sobre a vida de Pedro são os quatro Evangelhos (Mateus, Marcos Lucas e João). É citado também nos Atos dos Apóstolos, nas Epístolas de Paulo e nas duas Epístolas do próprio Pedro.</p>
 
-<p class="p_textos">Basílica de São Pedro -
+<p class="p_textos"><em>Basílica de São Pedro</em> -
 Em 316, Constantino, o primeiro imperador cristão, permitiu que o bispo Silvestre I erguesse no mesmo local do santuário erguido na sepultura de São Pedro, que já servira de sepultura para os primeiros bispos (posteriormente chamados de papa), um grande templo cujas obras se prolongaram de 326 a 349.  A antiga Basílica de São Pedro foi, depois de muito tempo, danificada e saqueada.</p>
 
 <p class="p_textos">Em 1506, o papa Júlio II iniciou a reconstrução da antiga basílica. A princípio tinha a intenção de preservar o edifício histórico, mas com o novo projeto logo se convenceu em demoli-lo e construir a nova Igreja. O altar original seria preservado. A nova Basílica de São Pedro só foi concluída em 1626.</p>
  
 <p class="p_textos">
-Oração de São Pedro -
+<em>Oração de São Pedro</em> -
 "Glorioso apóstolo São Pedro, com suas 7 chaves de ferro eu te peço, eu te rogo, eu te imploro, abra as portas dos meus caminhos, que se fecharam diante de mim, atrás de mim, a minha direita e a minha esquerda. Abra para mim os caminhos da felicidade, os caminhos financeiros, os caminhos profissionais, com as suas 7 chaves de ferro e me dê a graça de poder viver sem os obstáculos. Glorioso São Pedro, tu que sabes de todos os segredos do céu e da terra, ouve a minha oração e atende a prece que vos dirijo. Que assim seja. Amém."</p>
 </div>
 
