mudança de fonte para oração

--- a/textos/texto_1.html
+++ b/textos/texto_1.html
@@ -50,9 +50,10 @@ Em 316, Constantino, o primeiro imperador cristão, permitiu que o bispo Silvest
 
 <p class="p_textos">Em 1506, o papa Júlio II iniciou a reconstrução da antiga basílica. A princípio tinha a intenção de preservar o edifício histórico, mas com o novo projeto logo se convenceu em demoli-lo e construir a nova Igreja. O altar original seria preservado. A nova Basílica de São Pedro só foi concluída em 1626.</p>
  
+ <br>
 <p class="p_textos">
-<em>Oração de São Pedro</em> -
-"Glorioso apóstolo São Pedro, com suas 7 chaves de ferro eu te peço, eu te rogo, eu te imploro, abra as portas dos meus caminhos, que se fecharam diante de mim, atrás de mim, a minha direita e a minha esquerda. Abra para mim os caminhos da felicidade, os caminhos financeiros, os caminhos profissionais, com as suas 7 chaves de ferro e me dê a graça de poder viver sem os obstáculos. Glorioso São Pedro, tu que sabes de todos os segredos do céu e da terra, ouve a minha oração e atende a prece que vos dirijo. Que assim seja. Amém."</p>
+Oração de São Pedro -
+<em>"Glorioso apóstolo São Pedro, com suas 7 chaves de ferro eu te peço, eu te rogo, eu te imploro, abra as portas dos meus caminhos, que se fecharam diante de mim, atrás de mim, a minha direita e a minha esquerda. Abra para mim os caminhos da felicidade, os caminhos financeiros, os caminhos profissionais, com as suas 7 chaves de ferro e me dê a graça de poder viver sem os obstáculos. Glorioso São Pedro, tu que sabes de todos os segredos do céu e da terra, ouve a minha oração e atende a prece que vos dirijo. Que assim seja. Amém."</em></p>
 </div>
 
 
