--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <ul>
         <li><a href="textos/avisos.html">Avisos</a></li>   
         <li><a href="textos/contatos.html">Contatos</a></li>
-        <li><a href="#">Fotos</a></li>       
+        <li><a href="textos/fotos.html">Fotos</a></li>       
         <li><a href="textos/horarios.html">Horários</a></li>
         <li><a href="#">Pastorais</a></li>
     </ul>
