--- a/textos/avisos.html
+++ b/textos/avisos.html
@@ -10,9 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="../css/style.css"/>
 	<link href="https://fonts.googleapis.com/css2?family=Allura&family=Great+Vibes&family=Lobster&family=Ruthie&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@700&display=swap" rel="stylesheet">
-
 	<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Indie+Flower&display=swap" rel="stylesheet"><!--font do post-it-->
-
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
@@ -33,7 +31,7 @@
     <ul>
         <li><a href="../index.html">Home</a></li>   
         <li><a href="../textos/contatos.html">Contatos</a></li>
-        <li><a href="#">Fotos</a></li>       
+        <li><a href="../textos/fotos.html">Fotos</a></li>       
         <li><a href="../textos/horarios.html">Horários</a></li>
         <li><a href="#">Pastorais</a></li>
     </ul>
