--- a/textos/contatos.html
+++ b/textos/contatos.html
@@ -7,7 +7,6 @@
 
 	<link rel="stylesheet" type="text/css" href="../css/style.css"/>
 	<link href="https://fonts.googleapis.com/css2?family=Allura&family=Great+Vibes&family=Lobster&family=Ruthie&display=swap" rel="stylesheet">
-	
 	<link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@700&display=swap" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -26,7 +25,7 @@
     	<li><a href="../index.html">Home</a></li>
         <li><a href="../textos/avisos.html">Avisos</a></li>         
         <li><a href="../textos/horarios.html">Horários</a></li>       
-        <li><a href="#">Fotos</a></li>
+        <li><a href="../textos/fotos.html">Fotos</a></li>
         <li><a href="#">Pastorais</a></li>
     </ul>
 </nav>
