configurando as fotos

--- a/textos/fotos.html
+++ b/textos/fotos.html
@@ -33,9 +33,18 @@
 
 <div id="fotos">
 
+<!--<img src="../imagens/img_1.jpg">
+<img src="../imagens/img_2.jpg">
+<img src="../imagens/img_3.jpg">-->
+<img src="../imagens/img_4.jpg">
+<img src="../imagens/img_5.jpg">
+<img src="../imagens/img_6.jpg">
+<img src="../imagens/img_7.jpg">
+<img src="../imagens/img_8.jpg">
+<img src="../imagens/img_9.jpg">
+<img src="../imagens/img_10.jpg">
+<img src="../imagens/img_11.jpg">
 
-
-ESTAMOS TRABALHANDO NESTA PÁGINA
 </div>
 
 </section>
