inclusão pagina pastorais

--- a/textos/avisos.html
+++ b/textos/avisos.html
@@ -33,7 +33,7 @@
         <li><a href="../textos/contatos.html">Contatos</a></li>
         <li><a href="../textos/fotos.html">Fotos</a></li>       
         <li><a href="../textos/horarios.html">Horários</a></li>
-        <li><a href="#">Pastorais</a></li>
+        <li><a href="../textos/pastorais.html">Pastorais</a></li>
     </ul>
 </nav>
 </div>
