--- a/textos/contatos.html
+++ b/textos/contatos.html
@@ -26,7 +26,7 @@
         <li><a href="../textos/avisos.html">Avisos</a></li>         
         <li><a href="../textos/horarios.html">Horários</a></li>       
         <li><a href="../textos/fotos.html">Fotos</a></li>
-        <li><a href="#">Pastorais</a></li>
+        <li><a href="../textos/pastorais.html">Pastorais</a></li>
     </ul>
 </nav>
 
