--- a/textos/pastorais.html
+++ b/textos/pastorais.html
@@ -17,7 +17,7 @@
 <section>
 
 <div id="titulo">
-<h1>Fotos</h1>
+<h1>Pastorais</h1>
 </div>
 <div id="menu">
 <nav>
@@ -26,27 +26,17 @@
     	<li><a href="../textos/avisos.html">Avisos</a></li>   
         <li><a href="../textos/contatos.html">Contatos</a></li>
         <li><a href="../textos/horarios.html">Horários</a></li>        
-        <li><a href="../textos/pastorais.html">Pastorais</a></li>
+        <li><a href="#">Pastorais</a></li>
     </ul>
 </nav>
 </div>
 
-<div id="fotos">
+<div id="pastorais">
 
-<!--<img src="../imagens/img_1.jpg">
-<img src="../imagens/img_2.jpg">
-<img src="../imagens/img_3.jpg">-->
-<img src="../imagens/img_4.jpg">
-<img src="../imagens/img_5.jpg">
-<img src="../imagens/img_6.jpg">
-<img src="../imagens/img_7.jpg">
-<img src="../imagens/img_8.jpg">
-<img src="../imagens/img_9.jpg">
-<img src="../imagens/img_10.jpg">
-<img src="../imagens/img_11.jpg">
+
 
 </div>
-
+Página em construção
 </section>
 
 
