--- a/textos/horarios.html
+++ b/textos/horarios.html
@@ -27,7 +27,7 @@
     	<li><a href="../textos/avisos.html">Avisos</a></li>   
         <li><a href="../textos/contatos.html">Contatos</a></li>
         <li><a href="../textos/fotos.html">Fotos</a></li>        
-        <li><a href="#">Pastorais</a></li>
+        <li><a href="../textos/pastorais.html">Pastorais</a></li>
     </ul>
 	</nav>
     </div>
