--- a/textos/pastorais.html
+++ b/textos/pastorais.html
@@ -25,18 +25,19 @@
     	 <li><a href="../index.html">Home</a></li> 
     	<li><a href="../textos/avisos.html">Avisos</a></li>   
         <li><a href="../textos/contatos.html">Contatos</a></li>
+        <li><a href="../textos/fotos.html">Fotos</a></li>
         <li><a href="../textos/horarios.html">Horários</a></li>        
-        <li><a href="#">Pastorais</a></li>
+        
     </ul>
 </nav>
 </div>
 
-<div id="pastorais">
+<div id="pastorais" style="color: white">
 
-
-
-</div>
 Página em construção
+
+</div >
+
 </section>
 
 
